<resources>

    <string name="app_name">SnakeLadder</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="help">Make your way end of the board by rolling the die.If you land on a ladder you will find a shortcut,but  better to watch out for those slippery snakes</string>

    <string name="hint">Username</string>
    <string name="phint">Password</string>
    <string name="submit">Submit</string>
    <string name="title">Information</string>
    <string name="message">Your registration is successfully completed </string>
     <string name="getinfo">Are you sure to cancel game</string>
</resources>